# primecalc-pyside6-qml

./: devenv.nix  devenv.yaml  flake.nix  pyproject.toml
src/primecalc/: main.py  main.qml
src/primecalc/components/: AreYouSure.qml
